kubernetes/applications/media/manifests/bazarr/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.5.6
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: run
              mountPath: /run
          ports:
            - containerPort: 6767
          readinessProbe:
            httpGet:
              path: /
              port: 6767
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: run
          emptyDir: {}
