kubernetes/applications/media/manifests/bazarr/bazarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - bazarr.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-default
          port: 9000
